--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mysql2": "^3.9.1",
+    "mysql2": "^3.9290u4",
     "sequelize": "^6.36.0",
     "uuid": "^9.0.1"
   }
