--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test":  "mocha tests.js"
+    "start": "node index.js",
+    "test": "mocha Tests/*.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,11 @@
     "mysql2": "^3.9.1",
     "sequelize": "^6.36.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "chai": "^5.1.0",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.3.0",
+    "supertest": "^6.3.4"
   }
 }
